# GeneticKnapsack

./: CMakeLists.txt
genetic/: CGeneticAlgorithm.cpp  CIndividual.cpp  CKnapsackProblem.cpp
includes/: CGeneticAlgorithm.h  CIndividual.h  CKnapsackProblem.h  CRandomGenerator.h
utils/: CRandomGenerator.cpp
